<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/tvChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/tvChoose_str"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:textColor="?android:attr/textColorTertiary"
        android:textSize="18sp"
        android:onClick="animateOnClick"/>

    <Button
        android:id="@+id/btnPreBuilt"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.10"
        android:text="@string/btnPreBuilt_str"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/holo_blue_dark"
        android:typeface="sans"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnCustom"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.10"
        android:text="@string/btnCustom_str"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_light"
        android:typeface="sans"
        android:onClick="toCustomFeatures"/>
</LinearLayout>
